add delete card operation
